# pykerning

./: .gitignore  README.md  pyproject.toml  typeset.py  writer_fpdf.py
examples/steam/: typeset.py
notebooks/: pykerning.ipynb
pykerning/: __init__.py  composing.py  knuth.py  writer_fpdf.py
tests/: __init__.py  test_typesetting.py  test_writer_fpdf.py
